syntax = "proto3";

package rbac;

service RBACService {
  rpc CheckPermission(PermissionRequest) returns (PermissionResponse);
  rpc GetUserRoles(UserRolesRequest) returns (UserRolesResponse);
  rpc HasRole(RoleCheckRequest) returns (RoleCheckResponse);
}

message PermissionRequest {
  string userId = 1;
}

message PermissionResponse {
  bool allowed = 1;
  string reason = 2;
  repeated string roles = 3;
  repeated string permissions = 4;
}

message UserRolesRequest {
  string userId = 1;
}

message UserRolesResponse {
  repeated Role roles = 1;
}

message Role {
  string id = 1;
  string name = 2;
  repeated string permissions = 3;
}

message RoleCheckRequest {
  string userId = 1;
  string roleName = 2;
}

message RoleCheckResponse {
  bool hasRole = 1;
}